feat: add Spring Security, user specific history, and date validation